# mppr

./: README.md  pyproject.toml
mppr/: __init__.py  m_context.py  m_dict.py  mcontext.py  mdict.py  mppr.py
mppr/io/: base.py  creator.py  pickle.py  pydantic.py
tests/: manual_test.py  test_main.py
tests/manual/: map.py  upload_download.py
