[tool.poetry]
name = "mppr"
version = "0.1.0"
description = ""
authors = ["Misha Wagner <mishajw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
jsonlines = "^4.0.0"
tqdm = "^4.66.1"
pandas = "^2.1.4"
boto3 = "^1.34.19"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.0"
pyright = "^1.1.347"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
